# ControlDeck

./: .gitignore  AGENTS.md  README.md  deck.sh
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: a4d9c73b1e52_workflow_durable_cache.py  a73d9e4c2b18_managed_app_log_files.py  b7e1d94c2f60_workflow_durable_state.py  c2f8a6d53b91_workflow_business_events.py  d91a2c7f4e80_system_service_scope.py  dd6115224a90_baseline_current_schema.py  e2689f3f0c28_workflow_pauses_and_artifacts.py  e4f1a7b9c203_hourly_metric_history.py  (+2 more)
backend/app/: bootstrap.py  cli.py  config.py  main.py  server.py
backend/tests/: conftest.py  test_access_management.py  test_alerts.py  test_amd_gpu_profiles.py  test_api_rate_limit.py  test_app_gpu_usage.py  test_app_health.py  test_application_builder.py  test_application_builds.py  test_apps_api.py  test_apps_url.py  test_assistant_planner.py  test_auth.py  test_bootstrap_retired_app.py  test_chat_asr.py  test_chat_persist.py  test_chat_references.py  test_chatflow.py  test_credential_security.py  test_database_runtime.py  test_deep_research.py  test_disk_monitoring.py  test_electricity.py  test_engine_v2.py  test_files_api.py  test_gitrepos.py  test_gpu_monitoring.py  test_inline_code.py  test_jobs_persistence.py  test_llama_runtime.py  test_llm_providers.py  test_logs_redaction.py  test_maintenance.py  test_metrics_history.py  test_migrations.py  test_models_local_register.py  test_opencode_feature.py  test_paths.py  test_plugin_sdk.py  test_power_schedule.py  (+32 more)
scripts/: lib.sh  (+9 more)
(+344 files in other folders)
