[project]
name = "control-deck"
version = "0.1.0"
description = "Ubuntu Control Deck — self-hosted web control center for Ubuntu"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "argon2-cffi>=23.1",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
